  - Player is now warned if torpedoes are coming toward
    the player's submarine.

  - When torpedoes cannot hear their target, they will try
    to find a new one.

  - The game now searches for data files more effeciently by looking
    in the preset DATADIR, which is based on PREFIX. See the Makefile.

  - Simplified version detection. Value is now stored in top-level
    makefile.

  - Added "ships" directory to Makefile's install section.

  - Updated src/Makefile and Makefile to remove duplicate effort.

  - Added Makefile.windows to ease cross-platform builds. Added
    target "make windows" to top-level make file.

  - Fixed some compiler errors/warnings to make game more cross-platform
    friendly. 

============ openssn-0.5 released June 26, 2011 ==========

  - Main menu can now select and launch missions.

  - Added new drawing function CircleFill()

  - Game now displays main menu with interactive buttons.

  - We should only need to find data files once, then the files module
    remembers their location.

  - Moved primative drawing functions to draw.h, draw.cpp from
    main.h, main.cpp. This allows us to draw things in other
    modules, like the menu.

  - Created Menu module for displaying and working woth the main menu.

  - Sonar screen now shows angle and direction to target.

  - If the player's sub is destoryed, the game should now end gracefully.

  - Losing a torpedo target no longer causes crash.

  - Created top-level make file for easier access.

  - Towed sonar array limits sub's maximum speed.

  - Crew now gives feedback about extending/reteiving towed array.

  - Sonar display now adds more colour contrast to different types
    of signals. Surface ships are green, submarines blue and torpedoes
    are red.

  - Torpedoes show up on sonar.

  - Created new mission

  - Missions can now be accessed using the -m flag on the command line.


========== openssn-0.4 released June 11, 2011 =========
