@@ -1,0 +1,21 @@
+CC = i586-mingw32msvc-g++
+PREFIX ?= /usr
+DEVCFLAGS = -Wall -g -D_GNU_SOURCE `sdl-config --cflags` 
+CFLAGS = -g -Wall `sdl-config --cflags` -Wno-write-strings -I/usr/include/ -I/usr/include/SDL/ # -DDEBUG
+LIBS = -lm -lSDL -lSDL_gfx -lSDL_image `sdl-config --libs`
+OBJS = 	main.o sonar.o radar.o esm.o control.o submarine.o adcap.o coord.o stack.o contact.o towedarray.o targetmotionanalysis.o boatpositionlog.o dfont.o dstack.o message.o gameclock.o files.o mission.o menu.o draw.o
+SSN = ../openssn
+DATADIR = $(PREFIX)/share/games/openssn
+
+
+.SUFFIXES: .cpp .o
+
+.cpp.o:	
+	$(CC) $(CFLAGS) -c $<
+
+.o:
+	$(CC) $(CLFAGS) $< -o $@
+
+all: $(OBJS)
+	$(CC) $(OBJS) $(LIBS) -o $(SSN)
+
