@@ -1,3 +1,12 @@
+  - Player can now cut the towed sonar array to avoid
+    speed limitation.
+
+  - Player is now limited to eight launches at a time.
+
+  - Fixed crash issue with stack.
+
+  - Noisemakers now distract torpedoes (sometimes).
+
   - Player is now warned if torpedoes are coming toward
     the player's submarine.
 
